--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.20.1",
     "sweetalert2": "^11.10.1"
   },
