--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.48.2",
